--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -2,6 +2,6 @@
 	<head>
 	    <link rel="icon" type="image/png" href="/favicon.png" />
 	    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-	    <link rel="shortcut icon" href="/favicon/favicon.ico" />
+	    <link rel="shortcut icon" href="/favicon.ico" />
 	</head>
 </html>
