--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
-	    <link rel="icon" type="image/png" href="/steam-hub/favicon.png" />
-	    <link rel="icon" type="image/svg+xml" href="/steam-hub/favicon.svg" />
-	    <link rel="shortcut icon" type="image/x-icon" href="/steam-hub/favicon.ico" />
+	    <link rel="icon" type="image/png" href="/steamhub/favicon.png" />
+	    <link rel="icon" type="image/svg+xml" href="/steamhub/favicon.svg" />
+	    <link rel="shortcut icon" type="image/x-icon" href="/steamhub/favicon.ico" />
 	</head>
 </html>
